# meta-oxide

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE_NOTES_v0.1.0.md  SECURITY.md  build.rs  clippy.toml  pyproject.toml  rustfmt.toml
.cargo/: config.toml
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  test.yml
bindings/csharp/: README.md
bindings/node/: Cargo.toml  package.json
bindings/wasm/: .eslintrc.js  .gitignore  .npmignore  Cargo.toml  PHASE3_COMPLETE.md  PHASE3_SUMMARY.md  README.md  build.sh  jest.config.js  package.json  tsconfig.json
docs/: FEATURE_EXPANSION_PLAN.md  FORMAT_SUMMARY.md  PHASE4_COMPLETE.md  ROADMAP.md  api-reference.md  c-abi-implementation-guide.md  c-api-guide.md  c-binding-guide.md  development.md  examples.md  getting-started.md  multi-language-executive-summary.md  multi-language-strategy.md  phase-0-status.md
docs/api/: api-reference-csharp.md  api-reference-go.md  api-reference-java.md  api-reference-nodejs.md  api-reference-python.md  api-reference-rust.md  api-reference-wasm.md
examples/: basic_usage.py  before_after_comparison.rs  breadcrumb_demo.py  c_api_example.c  faqpage_example.py  localbusiness_extraction.py  macro_demo.rs  recipe_example.py
include/: meta_oxide.h
src/: ffi.rs  lib.rs
src/types/: jsonld.rs  (+8 more)
tests/: c_api_test.c  test_error_handling.py  test_python_api.py  test_real_world_html.py
(+63 files in other folders)
